fix: Update jsx syntax on svg. Add min height for mainNav panel on mobile. Adjust fade in animation on Carousel component.

--- a/components/Carousel/Carousel.module.scss
+++ b/components/Carousel/Carousel.module.scss
@@ -12,7 +12,7 @@
 }
 
 .isVisible {
-  animation: fadeIn 0.3s forwards 0.3s;
+  animation: fadeIn 0.5s forwards 0.3s;
 }
 
 .carousel {
