--- a/components/MainNav/MainNav.module.scss
+++ b/components/MainNav/MainNav.module.scss
@@ -37,6 +37,7 @@ animation: fadeIn 0.4s 0.3s forwards;
   flex-direction: column;
   outline: 1px solid rgba(0,0,0,0.3);
   outline-offset: -1.5rem;
+  min-height: 380px;
 
   @include breakpts.breakpoint-min(lg) {
     box-shadow: -8px -40vh 0px 0px rgba(0, 0, 0, 0.8), 6px 25vh 0px 0px rgba(0, 0, 0, 0.4);
